Tue Apr  9 15:13:10 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* MAINTAINERS: Update my email address.

2002-04-04  Alan Modra  <amodra@bigpond.net.au>

	* dep-in.sed: Cope with absolute paths.
	* Makefile.am (dep.sed): Subst TOPDIR.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2002-03-27  Peter Targett  <peter.targett@arc.com>

	* MAINTAINERS: Update my email address.

2002-03-21  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.
	* aclocal.m4: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.

2002-03-20  Daniel Berlin  <dan@dberlin.org>

	* readelf.c: Add support for displaying dwarf2 location lists.
	(do_debug_loc, debug_loc_section, debug_loc_size): New.
	(parse_args): Use 'O' as shorthand for displaying location list
	section.
	(process_section_headers): Handle debug_loc as well.
	(load_debug_loc): New.
	(free_debug_loc): New.
	(fetch_location_list): New.
	(display_debug_loc): New.
	(display_debug_info): Call load_debug_loc and free_debug_loc.
	(debug_displays): We can display .debug_loc now, too.
	(usage): Update usage string.
	(read_and_display_attr_value): Note location lists, but don't
	display them inline.

2002-03-18  Tom Rix  <trix@redhat.com>

	* Makefile.am: Add binutils emulation support.
	* configure.in: Same.
	* configure.tgt: New file.  Same.
	* ar.c (main): Use ar_emul_parse_arg.
	(usage): Use ar_emul_usage.
	(replace_members): Use ar_emul_replace, ar_emul_append.
	* binemul.c: New file.  Define the binutils emulation
	layer. Define default methods.
	* binemul.h: New file.  Binutils emulation layer header file.
	* emul_aix.c: New file.  AIX binutils emulation.
	* emul_vanilla.c: New file. Default binutils emulation.
	* Makefile.in: Regenerate.
	* configure: Same.

2002-03-18  Nick Clifton  <nickc@cambridge.redhat.com>

	* po/fr.po: Updated version.

2002-03-13  Nick Clifton  <nickc@cambridge.redhat.com>
