@@ -1,0 +1,8 @@
+// parse-only
+
+101 DIALOG DISCARDABLE  0, 0, 186, 95
+CLASS "myclass"
+BEGIN
+    DEFPUSHBUTTON   "OK",1,129,7,50,14
+END
+
