@@ -1,3 +1,8 @@
+2002-04-09  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* binutils-all/windres/quoteclass.rc: New test case for quoted
+	CLASS definitions in DIALOG resources.
+
 2002-02-18  Timothy Daly  <remote_bob@yahoo.com>
 
 	* binutils-all/readelf.r: Change expected output to match new,
